add_subdirectory(boxFilterNPP)
add_subdirectory(freeImageInteropNPP)
add_subdirectory(histEqualizationNPP)
add_subdirectory(imageSegmentationNPP)
add_subdirectory(batchCUBLAS)
add_subdirectory(conjugateGradient)
add_subdirectory(conjugateGradientPrecond)
add_subdirectory(oceanFFT)
add_subdirectory(simpleCUBLAS)
add_subdirectory(simpleCUFFT)
